Fixes: IE 8
Dez images are too large

--- a/wp-content/themes/gridstack/style.css
+++ b/wp-content/themes/gridstack/style.css
@@ -725,7 +725,7 @@ img.scale-with-grid {
   height: auto !important; 
 }
 #sitecontainer img {
-  max-width: 100% !important;
+  /*max-width: 100% !important;*/
   height: auto;
 }
 #sitecontainer .about img{
